updated project with proper assets

--- a/static/index.html
+++ b/static/index.html
@@ -8,5 +8,5 @@
     <div id="content">
     </div>
   </body>
-  <script src="dist/app.bundle.js"></script>
+  <script src="app.bundle.js"></script>
 </html>
